@@ -28,6 +28,8 @@ TL/03 Bugzilla 1518: Clarify "condition" processing in routers; that
 JH/02 Add EXPERIMENTAL_DANE, allowing for using the DNS as trust-anchor for
       server certificates when making smtp deliveries.
 
+JH/03 Support secondary-separator specifier for MX, SRV, TLSA lookups.
+
 
 Exim version 4.84
 -----------------
